removed themes and kept one dark mode for all app + fixed reponsivity issues

--- a/src/global.css
+++ b/src/global.css
@@ -17,21 +17,40 @@ html, body {
     padding: 0;
 }
 
-.light {
-    position: relative; /* Make sure the parent is positioned relative */
+body {
     background-image: url('./assets/bg15.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    color: #FFFFFF;
 }
 
-
-
-.dark {
-    background-image: url('./assets/bg15.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+/* Custom Scrollbar Styles */
+::-webkit-scrollbar {
+    width: 15px; /* Width of the scrollbar */
+    height: 8px; /* Height of the horizontal scrollbar */
 }
 
+::-webkit-scrollbar-track {
+    background: #011f29; /* Lighter shade of the dark blue button background */
+    box-shadow: inset 0 0 0 0; /* No inner shadow */
+}
 
+::-webkit-scrollbar-thumb {
+    background-color: #01121a; /* Dark blue button background color */
+    border: none;
+    box-shadow: inset 0 0 0 0; /* No inner shadow */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #02202b; /* Slightly lighter shade for hover effect */
+}
+
+::-webkit-scrollbar-corner {
+    background: #011f29; /* Ensure consistent background at corners */
+}
+
+button {
+    background-color: #01121a;
+    color: #FFFFFF;
+}
